--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ button.vis{
     }
     .pic img{
         width:100%;
-        height:auto;
+        height:500px;
         position:absolute;
         top:50px;
     }
