--- a/style.css
+++ b/style.css
@@ -253,8 +253,8 @@ button.carousel-control-next{
 .proj h2{
     position:relative;
     color:black;
-   padding:7px 10px;
-    font-size:12px;
+   padding:5px 10px;
+    font-size:8px;
     font-weight:bold;
 }
 button.vis{
@@ -264,10 +264,22 @@ button.vis{
     margin-right:10px;
     border-radius:40px;
     background-color:orange;
-    font-size:10px;
+    font-size:8px;
     width:fit-content;
     height:fit-content;
     padding:2px 10px;
+}
+button > a{
+    text-decoration: none;
+    color:black;
+}
+button > a:hover{
+    text-decoration: none;
+    color:black;
+}
+button.vis >a{
+    color:black;
+    text-decoration: none;
 }
 .carousel-inner{
     border:2px solid black;
@@ -479,7 +491,7 @@ top:250px;
 .carousel-inner{
     position: relative;
     top:200px;
-    height:500px;
+    height:520px;
     margin-bottom: 800px;
 }
 .cont h4{
@@ -498,7 +510,9 @@ button.vis{
         font-size:20px;
         padding:5px 20px;
         position: relative;
-        top:-40px;
+        top:-90px;
+        text-decoration: none;
+        color: white;
     }
     .card h3{
     font-size :23px;
@@ -519,7 +533,8 @@ button.vis{
 }
 .proj h2{
     font-size:25px;
-    padding-top:25px;
+    padding:20px;
+    line-height: 40px;
 }
 .cont{
 
